feat: logic added, some css todo

--- a/index.html
+++ b/index.html
@@ -17,9 +17,30 @@
 			</div>
 
 			<div class="controls">
-				<button id="prev">⏮️</button>
-				<button id="play-pause">▶️</button>
-				<button id="next">⏭️</button>
+				<button id="prev">
+					<img
+						src="./assets/svg/backward.png"
+						alt="backward"
+						width="40"
+						height="40"
+					/>
+				</button>
+				<button id="play-pause">
+					<img
+						src="./assets/svg/play.png"
+						alt="play-pause"
+						width="40"
+						height="40"
+					/>
+				</button>
+				<button id="next">
+					<img
+						src="./assets/svg/forward.png"
+						alt="next"
+						width="40"
+						height="40"
+					/>
+				</button>
 			</div>
 
 			<div class="progress">
@@ -30,8 +51,10 @@
 		</div>
 
 		<footer>
-			<a href="https://github.com/your-github">GitHub</a> | <span>2024</span> |
-			<a href="https://rs.school/js/"><img src="logo.png" alt="RS School" /></a>
+			<a href="https://github.com/kGudvin">GitHub</a> | <span>2024</span> |
+			<a href="https://rs.school/courses/javascript-preschool-ru"
+				><img src="./assets/svg/image.png" alt="RS School"
+			/></a>
 		</footer>
 
 		<script src="script.js"></script>
