feat:some css fixed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>Audio Player</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body>
-		<div class="player">
+	<body id="body">
+		<div class="player" id="player">
 			<div class="track-info">
 				<img id="track-cover" src="cover1.jpg" alt="Track Cover" />
 				<div>
@@ -21,24 +21,21 @@
 					<img
 						src="./assets/svg/backward.png"
 						alt="backward"
-						width="40"
-						height="40"
+						class="control-button"
 					/>
 				</button>
 				<button id="play-pause">
 					<img
 						src="./assets/svg/play.png"
 						alt="play-pause"
-						width="40"
-						height="40"
+						class="control-button"
 					/>
 				</button>
 				<button id="next">
 					<img
 						src="./assets/svg/forward.png"
 						alt="next"
-						width="40"
-						height="40"
+						class="control-button"
 					/>
 				</button>
 			</div>
