feat:some css fixed3

--- a/index.html
+++ b/index.html
@@ -17,27 +17,24 @@
 			</div>
 
 			<div class="controls">
-				<button id="prev">
-					<img
-						src="./assets/svg/backward.png"
-						alt="backward"
-						class="control-button"
-					/>
-				</button>
-				<button id="play-pause">
-					<img
-						src="./assets/svg/play.png"
-						alt="play-pause"
-						class="control-button"
-					/>
-				</button>
-				<button id="next">
-					<img
-						src="./assets/svg/forward.png"
-						alt="next"
-						class="control-button"
-					/>
-				</button>
+				<img
+					id="prev"
+					src="./assets/svg/backward.png"
+					alt="backward"
+					class="control-button"
+				/>
+				<img
+					id="play-pause"
+					src="./assets/svg/play.png"
+					alt="play-pause"
+					class="control-button"
+				/>
+				<img
+					id="next"
+					src="./assets/svg/forward.png"
+					alt="next"
+					class="control-button"
+				/>
 			</div>
 
 			<div class="progress">
